<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/danny_background"
    android:orientation="vertical" >

    <android.support.v7.widget.Toolbar
        style="@style/Toolbar"
        app:contentInsetStart="0dp" >

        <ImageView
            android:id="@+id/menu_hamburger"
            style="@style/ImageView.Hamburger"
            android:src="@drawable/ic_menu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="24sp" />
    </android.support.v7.widget.Toolbar>

    <View
        android:id="@+id/second"
        android:layout_width="match_parent"
        android:layout_height="48dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/menu_user"
                style="@style/LinearLayout_MenuItem"
                android:gravity="center" >

                <TextView
                    android:id="@+id/menu_user_text"
                    style="@style/TextView_MenuItem"
                    android:drawableLeft="@drawable/ic_user"
                    android:text="@string/menu_user" />
            </LinearLayout>

            <com.andexert.expandablelayout.library.ExpandableLayout
                android:id="@+id/newsExpandableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:el_contentLayout="@layout/expandable_news_content"
                app:el_headerLayout="@layout/expandable_news_header" >
            </com.andexert.expandablelayout.library.ExpandableLayout>

            <com.andexert.expandablelayout.library.ExpandableLayout
                android:id="@+id/schoolExpandableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:el_contentLayout="@layout/expandable_school_content"
                app:el_headerLayout="@layout/expandable_school_header" >
            </com.andexert.expandablelayout.library.ExpandableLayout>

            <LinearLayout
                android:id="@+id/menu_school_teacher"
                style="@style/LinearLayout_MenuItem"
                android:gravity="center"
                android:visibility="gone" >

                <TextView
                    style="@style/TextView_MenuItem"
                    android:drawableLeft="@drawable/ic_school"
                    android:text="教学日历" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/menu_electric"
                style="@style/LinearLayout_MenuItem"
                android:gravity="center" >

                <TextView
                    style="@style/TextView_MenuItem"
                    android:drawableLeft="@drawable/ic_electric2"
                    android:text="@string/menu_electric" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/menu_activity"
                style="@style/LinearLayout_MenuItem"
                android:gravity="center" >

                <TextView
                    style="@style/TextView_MenuItem"
                    android:drawableLeft="@drawable/ic_activity"
                    android:text="@string/activity" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/menu_scan"
                style="@style/LinearLayout_MenuItem"
                android:gravity="center" >

                <TextView
                    style="@style/TextView_MenuItem"
                    android:drawableLeft="@drawable/ic_scan"
                    android:text="@string/qr_code" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/menu_exit"
                style="@style/LinearLayout_MenuItem"
                android:layout_marginTop="32dp"
                android:gravity="center" >

                <TextView
                    style="@style/TextView_MenuItem"
                    android:drawableLeft="@drawable/ic_exit"
                    android:text="@string/exit" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/menu_setting"
                style="@style/LinearLayout_MenuItem"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:visibility="gone" >

                <TextView
                    style="@style/TextView_MenuItem"
                    android:drawableLeft="@drawable/ic_setting"
                    android:text="@string/setting" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>